1- adding dark mode style for mobile device 2- enhancement of html code 3- enhancement fo light mode style

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
     <title>Web Topics</title>
     <link rel="stylesheet" type="text/css" href="css/variables.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles-dark-mode.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap">
 </head>
 <body>
@@ -73,19 +73,21 @@
     <div class="search-results-cards">
        <div class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/react.webp" alt="Course Image">
+               <img class="course-image" src="./assets/logos/html.png" alt="Course Image">
            </div>
-        <h2 class="course-title">Web Development Languages</h2>
-        <p class="language-name">HTML</p>
-        <div class="rating-stars">
-            <ion-icon name="star"></ion-icon>
-            <ion-icon name="star"></ion-icon>
-            <ion-icon name="star"></ion-icon>
-            <ion-icon name="star"></ion-icon>
-            <ion-icon name="star-outline"></ion-icon>
+        <div class="card-info">
+            <h2 class="course-title">Web Development Languages</h2>
+            <p class="language-name">HTML</p>
+            <div class="rating-stars">
+                <ion-icon name="star"></ion-icon>
+                <ion-icon name="star"></ion-icon>
+                <ion-icon name="star"></ion-icon>
+                <ion-icon name="star"></ion-icon>
+                <ion-icon name="star-outline"></ion-icon>
 
+            </div>
+            <p class="author">Author: Sarah Smith</p>
         </div>
-        <p class="author">Author: Sarah Smith</p>
     </div>
         <div class="vertical-space"></div>
        <div class="course-card">
