enhance HTML structure and css style base on career coach comments.

--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,7 @@
 </head>
 <body>
 <header class="header">
-    <section class="header-content">
-        <div class="web-title">
             <h1>Web Topics</h1>
-        </div>
         <div class="web-controls-mobile">
             <button class="button"><ion-icon name="moon-outline"></ion-icon></button>
             <button class="button"><ion-icon name="heart-outline"></ion-icon></button>
@@ -25,7 +22,6 @@
             <button class="button"><ion-icon name="moon-outline"></ion-icon> Dark Mode</button>
             <button class="button"><ion-icon name="heart-outline"></ion-icon> Favourites</button>
         </div>
-    </section>
 </header>
 <main class="container">
   <section class="top-page-design">
@@ -33,7 +29,7 @@
       <div class="right-triangle"></div>
   </section>
   <section class="welcome-title">
-    <h1>Welcome to our website!</h1>
+    <h2>Welcome to our website!</h2>
     <p>We have a new design that's fresh, modern, and easy to use.</p>
   </section>
   <section class="search-box-mobile">
@@ -96,9 +92,9 @@
         </form>
     </section>
   <section class="search-results">
-    <h1 class="number-of-results">"24" Web Topics Found</h1>
+    <h2 class="number-of-results">"24" Web Topics Found</h2>
     <div class="search-results-cards">
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/html.png" alt="Course Image">
            </div>
@@ -113,11 +109,13 @@
                 <ion-icon name="star-outline"></ion-icon>
 
             </div>
-            <p class="author">Author: Sarah Smith</p>
+            <footer>
+                <p class="author">Author: Sarah Smith</p>
+            </footer>
         </div>
-    </div>
+    </section>
         <div class="vertical-space"></div>
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/css.webp" alt="Course Image">
            </div>
@@ -131,11 +129,14 @@
                <ion-icon name="star"></ion-icon>
                <ion-icon name="star-outline"></ion-icon>
            </div>
-           <p class="author">Author: David Lee</p>
+           <footer>
+               <p class="author">Author: David Lee</p>
+           </footer>
+
        </div>
-    </div>
+    </section>
         <div class="vertical-space"></div>
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/javascript.jpg" alt="Course Image">
            </div>
@@ -150,11 +151,13 @@
                 <ion-icon name="star-outline"></ion-icon>
 
             </div>
-            <p class="author">Author: Emily Chen</p>
+            <footer>
+                <p class="author">Author: Emily Chen</p>
+            </footer>
         </div>
-    </div>
+    </section>
         <div class="vertical-space"></div>
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/jquery.png" alt="Course Image">
            </div>
@@ -169,11 +172,13 @@
                 <ion-icon name="star-outline"></ion-icon>
 
             </div>
-            <p class="author">Author: John Johnson</p>
+           <footer>
+               <p class="author">Author: John Johnson</p>
+           </footer>
         </div>
-    </div>
+    </section>
         <div class="vertical-space"></div>
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/angular.png" alt="Course Image">
            </div>
@@ -188,11 +193,13 @@
                    <ion-icon name="star-outline"></ion-icon>
 
                </div>
-               <p class="author">Author: Jessica Davis</p>
+               <footer>
+                   <p class="author">Author: Jessica Davis</p>
+               </footer>
            </div>
-    </div>
+    </section>
         <div class="vertical-space"></div>
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/react.webp" alt="Course Image">
            </div>
@@ -207,11 +214,13 @@
                    <ion-icon name="star-outline"></ion-icon>
 
                </div>
-               <p class="author">Author: Daniel Brown</p>
+              <footer>
+                  <p class="author">Author: Daniel Brown</p>
+              </footer>
            </div>
-    </div>
+    </section>
         <div class="vertical-space"></div>
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/vuejs.jpeg" alt="Course Image">
            </div>
@@ -226,11 +235,13 @@
                 <ion-icon name="star-outline"></ion-icon>
 
             </div>
-            <p class="author">Author: Ava Jones</p>
+           <footer>
+               <p class="author">Author: Ava Jones</p>
+           </footer>
         </div>
-    </div>
+    </section>
         <div class="vertical-space"></div>
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/nodejs.webp" alt="Course Image">
            </div>
@@ -245,11 +256,13 @@
                 <ion-icon name="star-outline"></ion-icon>
 
             </div>
-            <p class="author">Author: Michael Kim</p>
+           <footer>
+               <p class="author">Author: Michael Kim</p>
+           </footer>
         </div>
-    </div>
+    </section>
         <div class="vertical-space"></div>
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/expressjs.webp" alt="Course Image">
            </div>
@@ -264,11 +277,13 @@
                    <ion-icon name="star-outline"></ion-icon>
 
                </div>
-               <p class="author">Author: Sophia Rodriquez</p>
+              <footer>
+                  <p class="author">Author: Sophia Rodriquez</p>
+              </footer>
            </div>
-    </div>
+    </section>
         <div class="vertical-space"></div>
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/ruby.jpeg" alt="Course Image">
            </div>
@@ -283,11 +298,13 @@
                    <ion-icon name="star-outline"></ion-icon>
 
                </div>
-               <p class="author">Author: William Lee</p>
+              <footer>
+                  <p class="author">Author: William Lee</p>
+              </footer>
            </div>
-    </div>
+    </section>
         <div class="vertical-space"></div>
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/django.jpeg" alt="Course Image">
            </div>
@@ -302,11 +319,13 @@
                    <ion-icon name="star-outline"></ion-icon>
 
                </div>
-               <p class="author">Author: Olivia Martinez</p>
+              <footer>
+                  <p class="author">Author: Olivia Martinez</p>
+              </footer>
            </div>
-    </div>
+    </section>
         <div class="vertical-space"></div>
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/flask.webp" alt="Course Image">
            </div>
@@ -321,11 +340,13 @@
                 <ion-icon name="star-outline"></ion-icon>
 
             </div>
-            <p class="author">Author: Ethan Thompson</p>
+           <footer>
+               <p class="author">Author: Ethan Thompson</p>
+           </footer>
         </div>
-    </div>
+    </section>
         <div class="vertical-space"></div>
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/sql.png" alt="Course Image">
            </div>
@@ -340,11 +361,13 @@
                 <ion-icon name="star-outline"></ion-icon>
 
             </div>
-            <p class="author">Author: Madison Davis</p>
+           <footer>
+               <p class="author">Author: Madison Davis</p>
+           </footer>
         </div>
-    </div>
+    </section>
         <div class="vertical-space"></div>
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/nosql.png" alt="Course Image">
            </div>
@@ -359,11 +382,13 @@
                 <ion-icon name="star-outline"></ion-icon>
 
             </div>
-            <p class="author">Author: Isabella Wilson</p>
+          <footer>
+              <p class="author">Author: Isabella Wilson</p>
+          </footer>
         </div>
-    </div>
+    </section>
         <div class="vertical-space"></div>
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/restapi.jpeg" alt="Course Image">
            </div>
@@ -378,11 +403,13 @@
                 <ion-icon name="star-outline"></ion-icon>
 
             </div>
-            <p class="author">Author: Jacob Garcia</p>
+           <footer>
+               <p class="author">Author: Jacob Garcia</p>
+           </footer>
         </div>
-    </div>
+    </section>
         <div class="vertical-space"></div>
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/graphql.png" alt="Course Image">
            </div>
@@ -397,11 +424,13 @@
                 <ion-icon name="star-outline"></ion-icon>
 
             </div>
-            <p class="author">Author: Mia Brown</p>
+           <footer>
+               <p class="author">Author: Mia Brown</p>
+           </footer>
         </div>
-    </div>
+    </section>
         <div class="vertical-space"></div>
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/oauth.png" alt="Course Image">
            </div>
@@ -416,11 +445,13 @@
                    <ion-icon name="star-outline"></ion-icon>
 
                </div>
-               <p class="author">Author: Mia Brown</p>
+              <footer>
+                  <p class="author">Author: Mia Brown</p>
+              </footer>
            </div>
-    </div>
+    </section>
         <div class="vertical-space"></div>
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/json.png" alt="Course Image">
            </div>
@@ -435,11 +466,13 @@
                    <ion-icon name="star-outline"></ion-icon>
 
                </div>
-               <p class="author">Author: Mia Brown</p>
+             <footer>
+                 <p class="author">Author: Mia Brown</p>
+             </footer>
            </div>
-    </div>
+    </section>
         <div class="vertical-space"></div>
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/json.png" alt="Course Image">
            </div>
@@ -454,11 +487,13 @@
                    <ion-icon name="star-outline"></ion-icon>
 
                </div>
-               <p class="author">Author: Liam Hernandez</p>
+              <footer>
+                  <p class="author">Author: Liam Hernandez</p>
+              </footer>
            </div>
-    </div>
+    </section>
         <div class="vertical-space"></div>
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/ajax.gif" alt="Course Image">
            </div>
@@ -473,11 +508,13 @@
                    <ion-icon name="star-outline"></ion-icon>
 
                </div>
-               <p class="author">Author: Avery Perez</p>
+              <footer>
+                  <p class="author">Author: Avery Perez</p>
+              </footer>
            </div>
-    </div>
+    </section>
         <div class="vertical-space"></div>
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/websockets.png" alt="Course Image">
            </div>
@@ -492,11 +529,13 @@
                    <ion-icon name="star-outline"></ion-icon>
 
                </div>
-               <p class="author">Author: Victoria Kim</p>
+              <footer>
+                  <p class="author">Author: Victoria Kim</p>
+              </footer>
            </div>
-    </div>
+    </section>
         <div class="vertical-space"></div>
-       <div class="course-card">
+       <section class="course-card">
            <div class="course-image-container">
                <img class="course-image" src="./assets/logos/responsive.gif" alt="Course Image">
            </div>
@@ -511,9 +550,11 @@
                 <ion-icon name="star-outline"></ion-icon>
 
             </div>
-            <p class="author">Author: Ryan Jones</p>
+          <footer>
+              <p class="author">Author: Ryan Jones</p>
+          </footer>
         </div>
-    </div>
+    </section>
     </div>
   </section>
 </main>
