--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
             <button class="button"><ion-icon name="heart-outline"></ion-icon></button>
         </div>
         <div class="web-controls">
-            <button class="button"><ion-icon name="moon-outline"></ion-icon> Dark Mode</button>
+            <button class="button" id="toggleDarkModeButton"><ion-icon name="moon-outline"></ion-icon> Dark Mode</button>
             <button class="button"><ion-icon name="heart-outline"></ion-icon> Favourites</button>
         </div>
 </header>
@@ -561,6 +561,11 @@
 <footer></footer>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-
+<script>
+    const toggleDarkModeButton = document.getElementById('toggleDarkModeButton');
+    toggleDarkModeButton.addEventListener('click', () => {
+        document.body.classList.toggle('dark-mode');
+    });
+</script>
 </body>
 </html>
