--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
      such as Java, Ruby, C#, PHP, C++, JQuery, and more.">
 
     <title>Web Topics</title>
-    <link rel="stylesheet" type="text/css" href="css/variables.css">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="./css/variables.css">
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap">
 </head>
 <body>
 <header class="header">
             <h1>Web Topics</h1>
         <div class="web-controls-mobile">
-            <button class="button"><ion-icon name="moon-outline"></ion-icon></button>
+            <button class="button" id="toggleDarkModeButtonMobile"><ion-icon name="moon-outline"></ion-icon></button>
             <button class="button"><ion-icon name="heart-outline"></ion-icon></button>
         </div>
         <div class="web-controls">
@@ -96,7 +96,7 @@
     <div class="search-results-cards">
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/html.png" alt="Course Image">
+               <img class="course-image" src="../assets/logos/html.png" alt="Course Image">
            </div>
         <div class="card-info">
             <h2 class="course-title">Web Development Languages</h2>
@@ -117,7 +117,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/css.webp" alt="Course Image">
+               <img class="course-image" src="../assets/logos/css.webp" alt="Course Image">
            </div>
        <div class="card-info">
            <h2 class="course-title">Web Development Languages</h2>
@@ -138,7 +138,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/javascript.jpg" alt="Course Image">
+               <img class="course-image" src="../assets/logos/javascript.jpg" alt="Course Image">
            </div>
         <div class="card-info">
             <h2 class="course-title">Web Development Languages</h2>
@@ -159,7 +159,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/jquery.png" alt="Course Image">
+               <img class="course-image" src="../assets/logos/jquery.png" alt="Course Image">
            </div>
         <div class="card-info">
             <h2 class="course-title">Frontend Frameworks and Libraries</h2>
@@ -180,7 +180,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/angular.png" alt="Course Image">
+               <img class="course-image" src="../assets/logos/angular.png" alt="Course Image">
            </div>
            <div class="card-info">
                <h2 class="course-title">Frontend Frameworks and Libraries</h2>
@@ -201,7 +201,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/react.webp" alt="Course Image">
+               <img class="course-image" src="../assets/logos/react.webp" alt="Course Image">
            </div>
            <div class="card-info">
                <h2 class="course-title">Frontend Frameworks and Libraries</h2>
@@ -222,7 +222,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/vuejs.jpeg" alt="Course Image">
+               <img class="course-image" src="../assets/logos/vuejs.jpeg" alt="Course Image">
            </div>
         <div class="card-info">
             <h2 class="course-title">Frontend Frameworks and Libraries</h2>
@@ -243,7 +243,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/nodejs.webp" alt="Course Image">
+               <img class="course-image" src="../assets/logos/nodejs.webp" alt="Course Image">
            </div>
         <div class="card-info">
             <h2 class="course-title">Backend Frameworks and Libraries</h2>
@@ -264,7 +264,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/expressjs.webp" alt="Course Image">
+               <img class="course-image" src="../assets/logos/expressjs.webp" alt="Course Image">
            </div>
            <div class="card-info">
                <h2 class="course-title">Backend Frameworks and Libraries</h2>
@@ -285,7 +285,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/ruby.jpeg" alt="Course Image">
+               <img class="course-image" src="../assets/logos/ruby.jpeg" alt="Course Image">
            </div>
            <div class="card-info">
                <h2 class="course-title">Backend Frameworks and Libraries</h2>
@@ -306,7 +306,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/django.jpeg" alt="Course Image">
+               <img class="course-image" src="../assets/logos/django.jpeg" alt="Course Image">
            </div>
            <div class="card-info">
                <h2 class="course-title">Backend Frameworks and Libraries</h2>
@@ -327,7 +327,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/flask.webp" alt="Course Image">
+               <img class="course-image" src="../assets/logos/flask.webp" alt="Course Image">
            </div>
         <div class="card-info">
             <h2 class="course-title">Backend Frameworks and Libraries</h2>
@@ -348,7 +348,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/sql.png" alt="Course Image">
+               <img class="course-image" src="../assets/logos/sql.png" alt="Course Image">
            </div>
         <div class="card-info">
             <h2 class="course-title">Databases and APIs</h2>
@@ -369,7 +369,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/nosql.png" alt="Course Image">
+               <img class="course-image" src="../assets/logos/nosql.png" alt="Course Image">
            </div>
         <div class="card-info">
             <h2 class="course-title">Databases and APIs</h2>
@@ -390,7 +390,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/restapi.jpeg" alt="Course Image">
+               <img class="course-image" src="../assets/logos/restapi.jpeg" alt="Course Image">
            </div>
         <div class="card-info">
             <h2 class="course-title">Databases and APIs</h2>
@@ -411,7 +411,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/graphql.png" alt="Course Image">
+               <img class="course-image" src="../assets/logos/graphql.png" alt="Course Image">
            </div>
         <div class="card-info">
             <h2 class="course-title">Databases and APIs</h2>
@@ -432,7 +432,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/oauth.png" alt="Course Image">
+               <img class="course-image" src="../assets/logos/oauth.png" alt="Course Image">
            </div>
            <div class="card-info">
                <h2 class="course-title">Web Development Concepts Technologies</h2>
@@ -453,7 +453,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/json.png" alt="Course Image">
+               <img class="course-image" src="../assets/logos/json.png" alt="Course Image">
            </div>
            <div class="card-info">
                <h2 class="course-title">Web Development Concepts Technologies</h2>
@@ -474,7 +474,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/json.png" alt="Course Image">
+               <img class="course-image" src="../assets/logos/json.png" alt="Course Image">
            </div>
            <div class="card-info">
                <h2 class="course-title">Web Development Concepts Technologies</h2>
@@ -495,7 +495,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/ajax.gif" alt="Course Image">
+               <img class="course-image" src="../assets/logos/ajax.gif" alt="Course Image">
            </div>
            <div class="card-info">
                <h2 class="course-title">Web Development Concepts Technologies</h2>
@@ -516,7 +516,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/websockets.png" alt="Course Image">
+               <img class="course-image" src="../assets/logos/websockets.png" alt="Course Image">
            </div>
            <div class="card-info">
                <h2 class="course-title">Web Development Concepts Technologies</h2>
@@ -537,7 +537,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="./assets/logos/responsive.gif" alt="Course Image">
+               <img class="course-image" src="../assets/logos/responsive.gif" alt="Course Image">
            </div>
         <div>
             <h2 class="course-title">Web Development Concepts Technologies</h2>
@@ -566,6 +566,11 @@
     toggleDarkModeButton.addEventListener('click', () => {
         document.body.classList.toggle('dark-mode');
     });
+    const toggleDarkModeButtonMobile = document.getElementById('toggleDarkModeButtonMobile');
+    toggleDarkModeButtonMobile.addEventListener('click', () => {
+        document.body.classList.toggle('dark-mode');
+    });
+
 </script>
 </body>
 </html>
