modifying code for deploy

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="search-results-cards">
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/html.png" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/html.png" alt="Course Image">
            </div>
         <div class="card-info">
             <h2 class="course-title">Web Development Languages</h2>
@@ -117,7 +117,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/css.webp" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/css.webp" alt="Course Image">
            </div>
        <div class="card-info">
            <h2 class="course-title">Web Development Languages</h2>
@@ -138,7 +138,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/javascript.jpg" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/javascript.jpg" alt="Course Image">
            </div>
         <div class="card-info">
             <h2 class="course-title">Web Development Languages</h2>
@@ -159,7 +159,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/jquery.png" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/jquery.png" alt="Course Image">
            </div>
         <div class="card-info">
             <h2 class="course-title">Frontend Frameworks and Libraries</h2>
@@ -180,7 +180,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/angular.png" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/angular.png" alt="Course Image">
            </div>
            <div class="card-info">
                <h2 class="course-title">Frontend Frameworks and Libraries</h2>
@@ -201,7 +201,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/react.webp" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/react.webp" alt="Course Image">
            </div>
            <div class="card-info">
                <h2 class="course-title">Frontend Frameworks and Libraries</h2>
@@ -222,7 +222,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/vuejs.jpeg" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/vuejs.jpeg" alt="Course Image">
            </div>
         <div class="card-info">
             <h2 class="course-title">Frontend Frameworks and Libraries</h2>
@@ -243,7 +243,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/nodejs.webp" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/nodejs.webp" alt="Course Image">
            </div>
         <div class="card-info">
             <h2 class="course-title">Backend Frameworks and Libraries</h2>
@@ -264,7 +264,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/expressjs.webp" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/expressjs.webp" alt="Course Image">
            </div>
            <div class="card-info">
                <h2 class="course-title">Backend Frameworks and Libraries</h2>
@@ -285,7 +285,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/ruby.jpeg" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/ruby.jpeg" alt="Course Image">
            </div>
            <div class="card-info">
                <h2 class="course-title">Backend Frameworks and Libraries</h2>
@@ -306,7 +306,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/django.jpeg" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/django.jpeg" alt="Course Image">
            </div>
            <div class="card-info">
                <h2 class="course-title">Backend Frameworks and Libraries</h2>
@@ -327,7 +327,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/flask.webp" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/flask.webp" alt="Course Image">
            </div>
         <div class="card-info">
             <h2 class="course-title">Backend Frameworks and Libraries</h2>
@@ -348,7 +348,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/sql.png" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/sql.png" alt="Course Image">
            </div>
         <div class="card-info">
             <h2 class="course-title">Databases and APIs</h2>
@@ -369,7 +369,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/nosql.png" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/nosql.png" alt="Course Image">
            </div>
         <div class="card-info">
             <h2 class="course-title">Databases and APIs</h2>
@@ -390,7 +390,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/restapi.jpeg" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/restapi.jpeg" alt="Course Image">
            </div>
         <div class="card-info">
             <h2 class="course-title">Databases and APIs</h2>
@@ -411,7 +411,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/graphql.png" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/graphql.png" alt="Course Image">
            </div>
         <div class="card-info">
             <h2 class="course-title">Databases and APIs</h2>
@@ -432,7 +432,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/oauth.png" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/oauth.png" alt="Course Image">
            </div>
            <div class="card-info">
                <h2 class="course-title">Web Development Concepts Technologies</h2>
@@ -453,7 +453,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/json.png" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/json.png" alt="Course Image">
            </div>
            <div class="card-info">
                <h2 class="course-title">Web Development Concepts Technologies</h2>
@@ -474,7 +474,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/json.png" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/json.png" alt="Course Image">
            </div>
            <div class="card-info">
                <h2 class="course-title">Web Development Concepts Technologies</h2>
@@ -495,7 +495,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/ajax.gif" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/ajax.gif" alt="Course Image">
            </div>
            <div class="card-info">
                <h2 class="course-title">Web Development Concepts Technologies</h2>
@@ -516,7 +516,7 @@
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/websockets.png" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/websockets.png" alt="Course Image">
            </div>
            <div class="card-info">
                <h2 class="course-title">Web Development Concepts Technologies</h2>
@@ -532,14 +532,14 @@
               <footer>
                   <p class="author">Author: Victoria Kim</p>
               </footer>
-           </div>
+           </div>§
     </section>
         <div class="vertical-space"></div>
        <section class="course-card">
            <div class="course-image-container">
-               <img class="course-image" src="../assets/logos/responsive.gif" alt="Course Image">
+               <img class="course-image" src="./assets/Logos/responsive.gif" alt="Course Image">
            </div>
-        <div>
+        <div>§§
             <h2 class="course-title">Web Development Concepts Technologies</h2>
             <p class="language-name">Responsive Design</p>
             <div class="rating-stars">
